--- a/front-end/Jenkinsfile
+++ b/front-end/Jenkinsfile
@@ -14,6 +14,32 @@ stages {
            }
        }
    }
+    
+    
+    stage('Deployment') {
+        steps{
+               withCredentials([string(credentialsId: 'hostip', variable: 'ip'), string(credentialsId: 'username', variable: 'username'), string(credentialsId: 'password', variable: 'password')]) {
+                script {
+                def remote = [:]
+                remote.name = 'T09'
+                remote.host = "${ip}"
+                remote.user = "${username}"
+                remote.password = "${password}"
+                remote.allowAnyHosts = true
+                sshCommand remote: remote, command: "git clone https://github.com/fluke1352/DEVELOPMENT-TOOLS-GET-A-PLUS.git"
+                sshCommand remote: remote, command: "docker-compose -f DEVELOPMENT-TOOLS-GET-A-PLUS/docker-compose-deploy-front.yml up -d"
+                sshCommand remote: remote, command: "rm -r DEVELOPMENT-TOOLS-GET-A-PLUS"
+                    
+                }
+          
+               }
+        }   
+    
+    
+    
+    
+    
+    
   
   }
 }
